add loading to pages, edit socialmedia on contact page

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,18 @@ body {
     )
     rgb(var(--background-start-rgb));
 } */
+
+
+
+  .carousel .control-dots {
+    position: absolute;
+    bottom: 0;
+    margin: -5px 0;
+    padding: 0;
+    text-align: center;
+    width: 100%;
+    z-index: 1;
+}
+.carousel .control-dots .dot li{
+    margin: 0 15px;
+}
